# automerge-persistent

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
automerge-persistent/: Cargo.toml
automerge-persistent-fs/: Cargo.toml
automerge-persistent-fs/src/: lib.rs
automerge-persistent-localstorage/: Cargo.toml
automerge-persistent-localstorage/src/: lib.rs
automerge-persistent-rocksdb/: Cargo.toml
automerge-persistent-rocksdb/src/: lib.rs
automerge-persistent-sled/: Cargo.toml
automerge-persistent-sled/benches/: save.rs
automerge-persistent-sled/src/: lib.rs
automerge-persistent/src/: autocommit.rs  backend.rs  document.rs  lib.rs  mem.rs  persister.rs
