[package]
name = "automerge-persistent-fs"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
automerge = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
automerge-persistent = { path = "../automerge-persistent" }
futures = "0.3"
hex = "0.4.3"
thiserror = "1.0.24"
tokio = { version = "1", features = ["fs"] }
