[package]
name = "automerge-persistent-fs"
version = "0.4.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jeffa5/automerge-persistent"
description = "A file system adapter for persisting Automerge documents"

[dependencies]
automerge = "0.4"
automerge-persistent = { path = "../automerge-persistent", version = "0.4.0" }
futures = { version = "0.3", optional = true }
hex = "0.4.3"
thiserror = "1.0.24"
tokio = { version = "1", features = ["fs"], optional = true }

[features]
async = ["futures", "tokio"]
