[package]
name = "automerge-persistent-localstorage"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
automerge = { git = "https://github.com/jeffa5/automerge-rs", branch = "main" }
automerge-protocol = { git = "https://github.com/jeffa5/automerge-rs", branch = "main" }
automerge-persistent = { path = "../automerge-persistent" }
web-sys = { version = "0.3.50", features = ["Storage"] }
serde = "1.0.125"
serde_json = "1.0.64"
seed = "0.8.0"
