[package]
name = "automerge-persistent-localstorage"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
automerge = { git = "https://github.com/automerge/automerge-rs", branch = "main" }
automerge-persistent = { path = "../automerge-persistent" }
web-sys = { version = "0.3.50", features = ["Storage"] }
serde = "1.0.125"
serde_json = "1.0.64"
thiserror = "1.0.24"
wasm-bindgen = "0.2.73"
base64 = "0.13.0"
