[package]
name = "automerge-persistent-localstorage"
version = "0.4.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jeffa5/automerge-persistent"
description = "A web-based localstorage adapter for persisting Automerge documents"

[dependencies]
automerge = { git = "https://github.com/jeffa5/automerge", branch = "cmp-heads" }
automerge-persistent = { path = "../automerge-persistent", version = "0.4.0" }
web-sys = { version = "0.3.50", features = ["Storage"] }
serde = "1.0.125"
serde_json = "1.0.64"
thiserror = "1.0.24"
wasm-bindgen = "0.2.73"
base64 = "0.21.0"
