[package]
name = "automerge-persistent-sled"
version = "0.1.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"

[dependencies]
automerge = "0.1.0"
automerge-persistent = { path = "../automerge-persistent", version = "0.1.0" }
sled = "0.34.6"
thiserror = "1.0.24"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "save"
harness = false
