[package]
name = "automerge-persistent-sled"
version = "0.2.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jeffa5/automerge-persistent"
description = "A sled adapter for persisting Automerge documents"

[dependencies]
automerge = "0.2"
automerge-persistent = { path = "../automerge-persistent", version = "0.2.0" }
sled = "0.34.6"
thiserror = "1.0.24"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "save"
harness = false
