[package]
name = "automerge-persistent"
version = "0.2.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jeffa5/automerge-persistent"
description = "The core library for managing persistent state of Automerge documents"

[dependencies]
automerge = "0.2"
thiserror = "1.0.24"
