[package]
name = "automerge-persistent"
version = "0.4.0"
authors = ["Andrew Jeffery <dev@jeffas.io>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/jeffa5/automerge-persistent"
description = "The core library for managing persistent state of Automerge documents"

[dependencies]
# automerge = "0.4"
automerge = { git = "https://github.com/jeffa5/automerge", branch = "cmp-heads" }
thiserror = "1.0.24"
